--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
 		<link href="./styles.css" rel="stylesheet">
-		<script type="module" src="./app.js"></script>
+		<script src="./app.js" type="module"></script>
 		<title>Lock & Key</title>
 	</head>
 	<body></body>
