--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-		<link href="./styles.css" rel="stylesheet">
-		<script src="./app.js" type="module"></script>
+		<script src="../dist/main.js" type="module"></script>
 		<title>Lock & Key</title>
 	</head>
 	<body></body>
