Removed Webpack and restructured

--- a/app/html/setup.html
+++ b/app/html/setup.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script defer="defer" src="../../dist/setup.js"></script>
+	<script defer="defer" src="../webpacks/setup/index.js"></script>
 </head>
 <body></body>
 </html>
