--- a/app/html/app.html
+++ b/app/html/app.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script defer="defer" src="../../dist/login.js"></script>
-	<link href="../../dist/login.css" rel="stylesheet">
+	<script defer="defer" src="../webpacks/app/index.js"></script>
 </head>
 <body></body>
 </html>
