--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script defer="defer" src="../webpacks/login/index.js"></script>
-	<link href="../webpacks/login/style.css" rel="stylesheet">
+	<script type="module" src="index.js"></script>
+	<link href="style.css" rel="stylesheet">
 </head>
 <body></body>
 </html>
