--- a/client/setup.html
+++ b/client/setup.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+	<script src="setup.js" type="module"></script>
 </head>
 <body></body>
 </html>
