Open/close window in window event handlers

--- a/client/onboard.html
+++ b/client/onboard.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script src="setup.js" type="module"></script>
+	<script src="onboard.js" type="module"></script>
 </head>
 <body></body>
 </html>
