--- a/client/unlock/index.html
+++ b/client/unlock/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script src="onboard.js" type="module"></script>
+	<script src="unlock.js" type="module"></script>
+	<link href="../lib/css/baseline.css" rel="stylesheet">
+	<link href="../lib/css/form.css" rel="stylesheet">
 </head>
 <body></body>
 </html>
