--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+	<script src="app.js" type="module"></script>
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body></body>
 </html>
