--- a/client/onboard/index.html
+++ b/client/onboard/index.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<title>Lock & Key</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	<script src="onboard.js" type="module"></script>
-	<link href="../lib/css/baseline.css" rel="stylesheet">
-	<link href="../lib/css/form.css" rel="stylesheet">
+	<script src="main.js" type="module"></script>
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body></body>
 </html>
